--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Superspeed500's home</title>
+        <!-- Bootstrap 5 CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <!-- Custom stylesheet -->
+        <link href="styles/main.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1>Welcome</h1>
-        <p>Welcome to my home page!</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 offset-md-6 pt-5">
+                    <h1 class="fg-text">Welcome</h1>
+                    <p class="fg-text">Welcome to my home page! This is where you can find links to my different social media accounts.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 offset-md-6 pb-2">
+                    <div class="card w-100 h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Twitter</h5>
+                            <p class="card-text">Check out my Twitter account! I mostly retweet stuff from other people that you should follow, but I also have some tweets of my own.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://twitter.com/Superspeed500" class="btn btn-primary">Go to Twitter</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 pb-2">
+                    <div class="card w-100 h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">YouTube</h5>
+                            <p class="card-text">I have a YouTube channel where I upload a few videos from time to time. Mostly gaming-related videos.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://www.youtube.com/channel/UCogoX_YolqW52nhehdTsMFA" class="btn btn-primary">Go to YouTube</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Bootstratp JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
 </html>
