--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 offset-md-6 pt-5">
+                    <img class="float-end" src="img/s500-logo.svg" width="128" height="128" />
                     <h1 class="fg-text">Welcome</h1>
                     <p class="fg-text">Welcome to my home page! This is where you can find links to my different social media accounts.</p>
                 </div>
