--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="col-md-6 offset-md-6 pt-5 container-fluid">
                     <div class="row">
                         <div class="col-lg-6 pb-4">
-                            <div class="card w-100 h-100">
+                            <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
-                                    <h5 class="card-title">Twitter</h5>
+                                    <h5 class="card-title text-light">Twitter</h5>
                                     <p class="card-text">Check out my Twitter account! I mostly retweet stuff from other people that you should follow, but I also have some tweets of my own.</p>
                                 </div>
                                 <div class="card-footer">
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 pb-4">
-                            <div class="card w-100 h-100">
+                            <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
                                     <h5 class="card-title">YouTube</h5>
                                     <p class="card-text">I have a YouTube channel where I upload a few videos from time to time. Mostly gaming-related videos.</p>
@@ -44,10 +44,10 @@
                             </div>
                         </div>
                         <div class="col-lg-6 pb-4">
-                            <div class="card w-100 h-100">
+                            <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
                                     <h5 class="card-title">Steam</h5>
-                                    <p class="card-text">Check out my Steam profile. You will find some Trackmani-tracks and Portal 2 test chambers designed by me there.</p>
+                                    <p class="card-text">Check out my Steam profile. You will find some Trackmania-tracks and Portal 2 test chambers designed by me there.</p>
                                 </div>
                                 <div class="card-footer">
                                     <a href="https://steamcommunity.com/id/Superspeed500" class="btn btn-primary">Go to Steam</a>
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 pb-4">
-                            <div class="card w-100 h-100">
+                            <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
                                     <h5 class="card-title">Roblox</h5>
                                     <p class="card-text">I do play some Roblox from time to time. I am also a member of <a href="https://www.roblox.com/groups/1000563/Speed-Studio#!/about">Speed Studio</a>, which is a Roblox game studio primarly developing games like <a href="https://www.roblox.com/games/59752972/Ninjas-VS-Agents">Ninjas VS Agenst</a> and <a href="https://www.roblox.com/games/163409450/The-battle-for-glory-v3-1-1">The battle for glory</a>.</p>
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="col-lg-12 pb-4">
-                            <div class="card w-100 h-100">
+                            <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
                                     <h5 class="card-title">GitHub</h5>
                                     <p class="card-text">Most of my projects are hosted on my internal on-prem GitLab-instance, but I also have a GitHub-profile for my public projects. This website is also hosted on GitHub! The entire source code for this web page is available there for you to check out.</p>
