Added Mastodon link.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
                         <div class="col-lg-6 pb-4">
                             <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
+                                    <h5 class="card-title text-light">Mastodon</h5>
+                                    <p class="card-text">I am testing Mastodon as a Twitter alternative. Don't excpect to much activity from me here.</p>
+                                </div>
+                                <div class="card-footer">
+                                    <a rel="me" class="btn btn-primary" href="https://mastodon.social/@superspeed500">Go to Mastodon</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 pb-4">
+                            <div class="card w-100 h-100 text-bg-dark">
+                                <div class="card-body">
                                     <h5 class="card-title">YouTube</h5>
                                     <p class="card-text">I have a YouTube channel where I upload a few videos from time to time. Mostly gaming-related videos.</p>
                                 </div>
@@ -65,7 +76,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-12 pb-4">
+                        <div class="col-lg-6 pb-4">
                             <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
                                     <h5 class="card-title">GitHub</h5>
