--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                         <div class="col-lg-6 pb-4">
                             <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
-                                    <h5 class="card-title text-light">Twitter</h5>
-                                    <p class="card-text">Check out my Twitter account! I mostly retweet stuff from other people that you should follow, but I also have some tweets of my own.</p>
+                                    <h5 class="card-title text-light">X (Twitter)</h5>
+                                    <p class="card-text">Check out my X account! I mostly retweet stuff from other people that you should follow, but I also have some tweets of my own.</p>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="https://twitter.com/Superspeed500" class="btn btn-primary">Go to Twitter</a>
+                                    <a href="https://x.com/Superspeed500" class="btn btn-primary">Go to X</a>
                                 </div>
                             </div>
                         </div>
@@ -36,7 +36,7 @@
                             <div class="card w-100 h-100 text-bg-dark">
                                 <div class="card-body">
                                     <h5 class="card-title text-light">Mastodon</h5>
-                                    <p class="card-text">I am testing Mastodon as a Twitter alternative. Don't excpect to much activity from me here.</p>
+                                    <p class="card-text">I am testing Mastodon as a X alternative. Don't excpect to much activity from me here.</p>
                                 </div>
                                 <div class="card-footer">
                                     <a rel="me" class="btn btn-primary" href="https://mastodon.social/@superspeed500">Go to Mastodon</a>
